[gd_scene load_steps=10 format=3 uid="uid://b3vqxtjeytlsk"]

[ext_resource type="Script" uid="uid://bfd4bxfdu5miv" path="res://scripts/entities/note.gd" id="1_i3r6s"]
[ext_resource type="Texture2D" uid="uid://dlcxj663q1bud" path="res://assets/textures/oldpage.png" id="1_nxo6p"]
[ext_resource type="FontFile" uid="uid://cswh6yjdnn5nu" path="res://assets/fonts/WaitingfortheSunrise-Regular.ttf" id="3_nhkfx"]
[ext_resource type="AudioStream" uid="uid://bcvqah3eut8o2" path="res://assets/sounds/sfx/paper/paper.wav" id="4_3r0to"]

[sub_resource type="BoxShape3D" id="BoxShape3D_i3r6s"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nhkfx"]
size = Vector3(2, 1, 2)

[sub_resource type="Animation" id="Animation_57xlx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_3r0to"]
resource_name = "default"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3pdvh"]
_data = {
&"RESET": SubResource("Animation_57xlx"),
&"default": SubResource("Animation_3r0to")
}

[node name="Note" type="Node3D"]
script = ExtResource("1_i3r6s")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
texture = ExtResource("1_nxo6p")

[node name="InteractArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractArea"]
shape = SubResource("BoxShape3D_i3r6s")

[node name="DestroyArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="DestroyArea"]
shape = SubResource("BoxShape3D_nhkfx")
debug_color = Color(0.646804, 0.521482, 0, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3pdvh")
}
autoplay = "default"

[node name="SFXPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_3r0to")
bus = &"SFX"

[node name="NoteTexture" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NoteBackground" type="TextureRect" parent="NoteTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 162.0
offset_top = 29.0
offset_right = -153.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nxo6p")
expand_mode = 1
stretch_mode = 5

[node name="NoteTextLabel" type="Label" parent="NoteTexture/NoteBackground"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 59.0
offset_top = 21.0
offset_right = 256.0
offset_bottom = 290.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_nhkfx")
theme_override_font_sizes/font_size = 20
text = "Test"
autowrap_mode = 3

[connection signal="body_entered" from="InteractArea" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="DestroyArea" to="." method="_on_destroy_area_body_exited"]
